document now saves 'scroll location' in the session between different sessions.

--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@
         <div class="footer-wrapper">footer</div>
       </footer>
     </div>
+
+    <script src="./main.js"></script>
   </body>
 </html>
