--- a/index.html
+++ b/index.html
@@ -16,6 +16,27 @@
               <img src="./images/navlink-HOME-IMG.png" alt="Home navlink" />
             </a>
           </nav>
+          <nav class="burger-nav">
+            <a href="#">
+              <svg class="burger" viewBox="0 0 100 80" width="40" height="40">
+                <rect width="100" height="15" rx="8" style="fill: #fff"></rect>
+                <rect
+                  y="30"
+                  width="100"
+                  height="15"
+                  rx="8"
+                  style="fill: #fff"
+                ></rect>
+                <rect
+                  y="60"
+                  width="100"
+                  height="15"
+                  rx="8"
+                  style="fill: #fff"
+                ></rect>
+              </svg>
+            </a>
+          </nav>
         </div>
       </header>
 
