--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/utils.css" />
   </head>
   <body>
     <div class="page-wrapper">
@@ -18,19 +19,19 @@
           </nav>
           <nav class="burger-nav">
             <a href="#">
-              <svg class="burger" viewBox="0 0 100 80" width="40" height="40">
-                <rect width="100" height="15" rx="8" style="fill: #fff"></rect>
+              <svg class="burger" viewBox="0 0 100 80" width="35" height="30">
+                <rect width="100" height="11" rx="8" style="fill: #fff"></rect>
                 <rect
                   y="30"
                   width="100"
-                  height="15"
+                  height="11"
                   rx="8"
                   style="fill: #fff"
                 ></rect>
                 <rect
                   y="60"
                   width="100"
-                  height="15"
+                  height="11"
                   rx="8"
                   style="fill: #fff"
                 ></rect>
@@ -40,8 +41,31 @@
         </div>
       </header>
 
-      <div class="showcase">
-        <span class="display"></span>
+      <div class="intro-showcase">
+        <nav class="intro-navlinks">
+          <div class="intro-about intro-link">
+            <img
+              class="intro-img"
+              src="./images/clement-m-F_-0BxGuVvo-unsplash.jpg"
+              alt="A picture of a man walking in the forest."
+            />
+            <a href="#about" class="ctalink">
+              <h2>About me</h2>
+              <span class="cta-arrow">&#8594;</span>
+            </a>
+          </div>
+          <div class="intro-work intro-link">
+            <img
+              class="intro-img"
+              src="./images/caleb-george-5sF6NrB1MEg-unsplash.jpg"
+              alt="A picture of a plant reaching for upwards with a colorful background."
+            />
+            <a class="ctalink" href="#work">
+              <h2>My work</h2>
+              <span class="cta-arrow">&#8594;</span>
+            </a>
+          </div>
+        </nav>
       </div>
 
       <main>
