HTML 'work section' structure and basic styling.

--- a/index.html
+++ b/index.html
@@ -43,17 +43,6 @@
 
       <div class="intro-showcase">
         <nav class="intro-navlinks">
-          <div class="intro-about intro-link">
-            <img
-              class="intro-img"
-              src="./images/clement-m-F_-0BxGuVvo-unsplash.jpg"
-              alt="A picture of a man walking in the forest."
-            />
-            <a href="#about" class="ctalink">
-              <h2>About me</h2>
-              <span class="cta-arrow">&#8594;</span>
-            </a>
-          </div>
           <div class="intro-work intro-link">
             <img
               class="intro-img"
@@ -65,11 +54,76 @@
               <span class="cta-arrow">&#8594;</span>
             </a>
           </div>
+          <div class="intro-about intro-link">
+            <img
+              class="intro-img"
+              src="./images/clement-m-F_-0BxGuVvo-unsplash.jpg"
+              alt="A picture of a man walking in the forest."
+            />
+            <a href="#about" class="ctalink">
+              <h2>About me</h2>
+              <span class="cta-arrow">&#8594;</span>
+            </a>
+          </div>
         </nav>
       </div>
 
       <main>
-        <div class="main-wrapper">main</div>
+        <div class="main-wrapper">
+          <section id="work" class="main-showcase">
+            <div class="box box-1">
+              <article class="info">
+                <h4 class="box-h4">Layout Project</h4>
+                <p class="box-info">
+                  My first hand in project from my Higher Vocational Education
+                  program, a project to show my understanding of css grid,
+                  flexbox and some media queries.
+                </p>
+                <a href="https://github.com/paccao/css-grid-flexbox-exercise">
+                  Link
+                </a>
+              </article>
+              <img src="https://placehold.it/50" alt="placeholder 50x50 img" />
+            </div>
+
+            <div class="box box-2">
+              <article class="info">
+                <h4 class="box-h4">Apocalyptic Post-Human Clicker</h4>
+                <p class="box-info">
+                  An arcade game where you click and upgrade your technology and
+                  skills to save a dystopic desolate planet.
+                </p>
+                <a href="https://github.com/paccao/Clicker"> Link </a>
+              </article>
+              <img src="https://placehold.it/50" alt="placeholder 50x50 img" />
+            </div>
+
+            <div class="box box-3">
+              <article class="info">
+                <h4 class="box-h4">Example</h4>
+                <p class="box-info">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Totam, error!
+                </p>
+                <a href="#work"> Link </a>
+              </article>
+              <img src="https://placehold.it/50" alt="placeholder 50x50 img" />
+            </div>
+
+            <div class="box box-4">
+              <article class="info">
+                <h4 class="box-h4">Example 2</h4>
+                <p class="box-info">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Officia ad expedita at repellat quae explicabo iure cumque
+                  culpa.
+                </p>
+                <a href="#work"> Link </a>
+              </article>
+              <img src="https://placehold.it/50" alt="placeholder 50x50 img" />
+            </div>
+          </section>
+        </div>
       </main>
       <footer>
         <div class="footer-wrapper">footer</div>
