Code cleanup and main showcase completed.

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
             <section class="showcase-row1">
               <img
                 class="showcase-img showcase-img-1"
-                src="https://placehold.it/300"
-                alt="placeholder 300x300 img"
+                src="./images/main-section/squares/martin-brechtl-GWJUBaZFv4I-unsplash.jpg"
+                alt="An image of the seaside cliffs layed out nicely along the coast."
               />
               <div class="box box-1">
                 <article class="info">
@@ -123,8 +123,8 @@
             <section class="showcase-row2">
               <img
                 class="showcase-img showcase-img-2"
-                src="https://placehold.it/300"
-                alt="placeholder 300x300 img"
+                src="./images/main-section/squares/mario-silva-gJDCnOcS_Bs-unsplash.jpg"
+                alt="An image of a desolate land"
               />
               <div class="box box-2">
                 <article class="info">
@@ -143,11 +143,14 @@
             </section>
 
             <section class="showcase-row3">
-              <img
+              <!-- <img
                 class="showcase-img showcase-img-3"
-                src="https://placehold.it/300"
+                src="./images/main-section/milad-b-fakurian-WRnuGh8rPm0-unsplash.jpg"
                 alt="placeholder 300x300 img"
-              />
+              /> -->
+              <span class="showcase-img showcase-img-3">
+                <span></span>
+              </span>
               <div class="box box-3">
                 <article class="info">
                   <h3 class="box-h3">Example</h3>
@@ -158,13 +161,13 @@
                 </article>
               </div>
               <div class="box-3-link box-link">
-                <a href="#work" target="_blank"> Link</a>
+                <a href="https://github.com/paccao/" target="_blank"> Link</a>
               </div>
             </section>
             <section class="showcase-row4">
               <img
                 class="showcase-img showcase-img-4"
-                src="https://placehold.it/300"
+                src="./images/main-section/squares/miguel-angel-diaz-magister-WJ--6hezMRI-unsplash.jpg"
                 alt="placeholder 300x300 img"
               />
               <div class="box box-4">
@@ -178,7 +181,7 @@
                 </article>
               </div>
               <div class="box-4-link box-link">
-                <a href="#work" target="_blank"> Link</a>
+                <a href="https://github.com/paccao/" target="_blank"> Link</a>
               </div>
             </section>
           </section>
