--- a/index.html
+++ b/index.html
@@ -185,6 +185,8 @@
               </div>
             </section>
           </section>
+
+          <span class="main-parallax"></span>
         </div>
       </main>
       <footer>
