About section Programming language bar

--- a/index.html
+++ b/index.html
@@ -187,6 +187,12 @@
           </section>
 
           <span class="main-parallax"></span>
+
+          <aside class="programming-langbar">
+            <i class="fab fa-html5 fa-7x"></i>
+            <i class="fab fa-js-square fa-7x"></i>
+            <i class="fab fa-css3-alt fa-7x"></i>
+          </aside>
         </div>
       </main>
       <footer>
