Copyright section done

--- a/index.html
+++ b/index.html
@@ -196,7 +196,13 @@
         </div>
       </main>
       <footer>
-        <div class="footer-wrapper">footer</div>
+        <div class="footer-wrapper">
+          <section class="copyright">
+            <small class="text-color-orange font-roboto-mono">
+              &copy; MADE BY JOEL PLUMPPU 2021
+            </small>
+          </section>
+        </div>
       </footer>
     </div>
 
