About me section complete.

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                 <article class="info">
                   <h3 class="box-h3">Apocalyptic Post-Human Clicker</h3>
                   <p class="box-info">
-                    An arcade game where you click and upgrade your technology &
-                    skills to save a dystopic desolate planet.
+                    An arcade game where you click to plant trees and upgrade
+                    your technology & skills to save a dystopic desolate planet.
                   </p>
                 </article>
               </div>
@@ -176,7 +176,12 @@
                   <p class="box-info">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Officia ad expedita at repellat quae explicabo iure cumque
-                    culpa.
+                    culpa. Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. <br /><br />Lorem ipsum, dolor sit amet consectetur
+                    adipisicing elit. Laudantium aliquam ex amet ipsam
+                    reiciendis id aspernatur officia quod et, nisi neque quas
+                    ipsa autem? Doloribus minima ipsum minus animi, culpa autem
+                    itaque praesentium. Alias, laboriosam.
                   </p>
                 </article>
               </div>
@@ -187,6 +192,39 @@
           </section>
 
           <span class="main-parallax"></span>
+
+          <section id="about" class="about-section">
+            <div class="about-wrapper">
+              <img
+                class="about-wrapper-img"
+                src="./images/Joel in the bushes.jpg"
+                alt="Picture of me in the woods"
+              />
+              <h2 class="about-wrapper-text about-header">About me</h2>
+              <p class="about-wrapper-text about-info about-info-1">
+                Hi! My name is Joel Plumppu and I am 20 years old. I'm currently
+                studying front end web development with web security as the
+                focus of my studies at Jensens education in Gothenburg, Sweden.
+              </p>
+              <p class="about-wrapper-text about-info about-info-2">
+                Things that I find really interesting are design, psychology and
+                philosophy. With my studies I hope to explore how these
+                different areas can be combined to help people struggling with
+                mental illness.
+              </p>
+              <p class="about-wrapper-text about-info about-info-3">
+                I am a knowledge hungry person, I always try to find new and
+                different perspectives on things.
+              </p>
+              <p class="about-wrapper-text about-info about-info-4">
+                In my spare time I like to spend much of my time in nature. I am
+                an adventurer at heart and like to take long hikes in the
+                forest. I also really enjoy listening to music and to cook,
+                preferably at the same time. Whenever I'm not doing any of those
+                things I like to enjoy a board game session with friends.
+              </p>
+            </div>
+          </section>
 
           <aside class="programming-langbar">
             <i class="fab fa-html5 fa-7x"></i>
