Contact section finished.

--- a/index.html
+++ b/index.html
@@ -233,8 +233,17 @@
           </aside>
         </div>
       </main>
-      <footer>
+      <footer id="contact">
         <div class="footer-wrapper">
+          <section class="contact">
+            <h2 id="contact-header">Contact</h2>
+            <div class="contact-links">
+              <a href="https://github.com/paccao"
+                ><i class="fab fa-github fa-10x"></i
+              ></a>
+              <i class="fab fa-linkedin fa-10x"></i>
+            </div>
+          </section>
           <section class="copyright">
             <small class="text-color-orange font-roboto-mono">
               &copy; MADE BY JOEL PLUMPPU 2021
