Media queries and code cleanup

--- a/index.html
+++ b/index.html
@@ -84,6 +84,19 @@
             </a>
           </div>
         </nav>
+
+        <section class="mobile-intro-navlinks">
+          <div class="mobile-intro-wrapper">
+            <h2>Hi! <br />I'm Joel.</h2>
+            <nav>
+              <ul>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+              </ul>
+            </nav>
+          </div>
+        </section>
       </div>
 
       <main>
@@ -245,9 +258,7 @@
             </div>
           </section>
           <section class="copyright">
-            <small class="text-color-orange font-roboto-mono">
-              &copy; MADE BY JOEL PLUMPPU 2021
-            </small>
+            <small> &copy; MADE BY JOEL PLUMPPU 2021 </small>
           </section>
         </div>
       </footer>
