Began cleaning up the code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,46 +8,24 @@
     <title>Joel Plumppu Web Developer</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/utils.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
   </head>
+
   <body>
     <div class="page-wrapper">
       <header>
         <div class="header-wrapper">
           <nav class="home-nav">
             <a href="#">
-              <img
-                src="./images/navlink-HOME-IMG-dark.svg"
-                alt="Home navlink"
-              />
+              <img src="./images/navlink-HOME-IMG-dark.svg" alt="Home navlink" />
             </a>
           </nav>
           <nav class="burger-nav">
             <div>
               <svg class="burger" viewBox="0 0 100 80" width="35" height="30">
-                <rect
-                  width="100"
-                  height="11"
-                  rx="8"
-                  style="fill: #08151d"
-                ></rect>
-                <rect
-                  y="30"
-                  width="100"
-                  height="11"
-                  rx="8"
-                  style="fill: #08151d"
-                ></rect>
-                <rect
-                  y="60"
-                  width="100"
-                  height="11"
-                  rx="8"
-                  style="fill: #08151d"
-                ></rect>
+                <rect width="100" height="11" rx="8" style="fill: #08151d"></rect>
+                <rect y="30" width="100" height="11" rx="8" style="fill: #08151d"></rect>
+                <rect y="60" width="100" height="11" rx="8" style="fill: #08151d"></rect>
               </svg>
             </div>
             <ul class="burger-links inactive">
@@ -62,22 +41,16 @@
       <div class="intro-showcase">
         <nav class="intro-navlinks">
           <div class="intro-work intro-link">
-            <img
-              class="intro-img work-img"
-              src="./images/caleb-george-5sF6NrB1MEg-unsplash.jpg"
-              alt="A picture of a plant reaching for upwards with a colorful background."
-            />
+            <img class="intro-img work-img" src="./images/caleb-george-5sF6NrB1MEg-unsplash.jpg"
+              alt="A picture of a plant reaching for upwards with a colorful background." />
             <a class="ctalink" href="#work">
               <h2>My work</h2>
               <span class="cta-arrow">&#8594;</span>
             </a>
           </div>
           <div class="intro-about intro-link">
-            <img
-              class="intro-img about-img"
-              src="./images/clement-m-F_-0BxGuVvo-unsplash.jpg"
-              alt="A picture of a man walking in the forest."
-            />
+            <img class="intro-img about-img" src="./images/clement-m-F_-0BxGuVvo-unsplash.jpg"
+              alt="A picture of a man walking in the forest." />
             <a href="#about" class="ctalink">
               <h2>About me</h2>
               <span class="cta-arrow">&#8594;</span>
@@ -108,11 +81,9 @@
 
           <section class="main-showcase">
             <section class="showcase-row1">
-              <img
-                class="showcase-img showcase-img-1"
+              <img class="showcase-img showcase-img-1"
                 src="./images/main-section/squares/martin-brechtl-GWJUBaZFv4I-unsplash.jpg"
-                alt="An image of the seaside cliffs layed out nicely along the coast."
-              />
+                alt="An image of the seaside cliffs layed out nicely along the coast." />
               <div class="box box-1">
                 <article class="info">
                   <h3 class="box-h3">Layout Project</h3>
@@ -124,21 +95,16 @@
                 </article>
               </div>
               <div class="box-1-link box-link">
-                <a
-                  href="https://github.com/paccao/css-grid-flexbox-exercise"
-                  target="_blank"
-                >
+                <a href="https://github.com/paccao/css-grid-flexbox-exercise" target="_blank">
                   Link
                 </a>
               </div>
             </section>
 
             <section class="showcase-row2">
-              <img
-                class="showcase-img showcase-img-2"
+              <img class="showcase-img showcase-img-2"
                 src="./images/main-section/squares/mario-silva-gJDCnOcS_Bs-unsplash.jpg"
-                alt="An image of a desolate land"
-              />
+                alt="An image of a desolate land" />
               <div class="box box-2">
                 <article class="info">
                   <h3 class="box-h3">Apocalyptic Post-Human Clicker</h3>
@@ -150,8 +116,7 @@
               </div>
               <div class="box-2-link box-link">
                 <a href="https://github.com/paccao/Clicker" target="_blank">
-                  Link</a
-                >
+                  Link</a>
               </div>
             </section>
 
@@ -178,11 +143,9 @@
               </div>
             </section>
             <section class="showcase-row4">
-              <img
-                class="showcase-img showcase-img-4"
+              <img class="showcase-img showcase-img-4"
                 src="./images/main-section/squares/miguel-angel-diaz-magister-WJ--6hezMRI-unsplash.jpg"
-                alt="placeholder 300x300 img"
-              />
+                alt="placeholder 300x300 img" />
               <div class="box box-4">
                 <article class="info">
                   <h3 class="box-h3">Example 2</h3>
@@ -208,16 +171,11 @@
 
           <section id="about" class="about-section">
             <div class="about-wrapper">
-              <img
-                class="about-wrapper-img"
-                src="./images/Joel in the bushes.jpg"
-                alt="Picture of me in the woods"
-              />
+              <img class="about-wrapper-img" src="./images/Joel in the bushes.jpg" alt="Picture of me in the woods" />
               <h2 class="about-wrapper-text about-header">About me</h2>
               <p class="about-wrapper-text about-info about-info-1">
-                Hi! My name is Joel Plumppu and I am 20 years old. I'm currently
-                studying front end web development with web security as the
-                focus of my studies at Jensens education in Gothenburg, Sweden.
+                Hi! My name is Joel Plumppu and I am 20 years old. I'm a junior web developer currently
+                studying at Jensens education in Gothenburg, Sweden. I'm currently learning React and Tailwindcss.
               </p>
               <p class="about-wrapper-text about-info about-info-2">
                 Things that I find really interesting are design, psychology and
@@ -226,8 +184,7 @@
                 mental illness.
               </p>
               <p class="about-wrapper-text about-info about-info-3">
-                I am a knowledge hungry person, I always try to find new and
-                different perspectives on things.
+                I have a thirst for knowledge, I always try to find new and different perspectives on things.
               </p>
               <p class="about-wrapper-text about-info about-info-4">
                 In my spare time I like to spend much of my time in nature. I am
@@ -240,6 +197,7 @@
           </section>
 
           <aside class="programming-langbar">
+            <i class="fab fa-react fa-7x f41b"></i>
             <i class="fab fa-html5 fa-7x"></i>
             <i class="fab fa-js-square fa-7x"></i>
             <i class="fab fa-css3-alt fa-7x"></i>
@@ -251,10 +209,15 @@
           <section class="contact">
             <h2 id="contact-header">Contact</h2>
             <div class="contact-links">
-              <a href="https://github.com/paccao"
-                ><i class="fab fa-github fa-10x"></i
-              ></a>
-              <i class="fab fa-linkedin fa-10x"></i>
+              <div>
+                <h3>Send me an email!</h3>
+                <p>joel.plumppu@gmail.com</p>
+              </div>
+              <div>
+                <a target="_blank" href="https://github.com/paccao"><i class="fab fa-github fa-9x"></i></a>
+                <a target="_blank" href="https://www.linkedin.com/in/joel-plumppu-254013202/"><i
+                    class="fab fa-linkedin fa-9x"></i></a>
+              </div>
             </div>
           </section>
           <section class="copyright">
@@ -266,4 +229,5 @@
 
     <script src="./main.js"></script>
   </body>
+
 </html>
