Touched on the styling a little bit.

--- a/index.html
+++ b/index.html
@@ -197,27 +197,25 @@
           </section>
 
           <aside class="programming-langbar">
-            <i class="fab fa-react fa-7x f41b"></i>
-            <i class="fab fa-html5 fa-7x"></i>
-            <i class="fab fa-js-square fa-7x"></i>
-            <i class="fab fa-css3-alt fa-7x"></i>
+            <i class="fab fa-react fa-5x"></i>
+            <i class="fab fa-js-square fa-5x"></i>
+            <i class="fab fa-html5 fa-5x"></i>
+            <i class="fab fa-css3-alt fa-5x"></i>
           </aside>
         </div>
       </main>
       <footer id="contact">
         <div class="footer-wrapper">
           <section class="contact">
-            <h2 id="contact-header">Contact</h2>
+            <h2>Contact</h2>
+            <div id="contact-email-block">
+              <h3>My email:</h3>
+              <p>joel.plumppu@gmail.com</p>
+            </div>
             <div class="contact-links">
-              <div>
-                <h3>Send me an email!</h3>
-                <p>joel.plumppu@gmail.com</p>
-              </div>
-              <div>
-                <a target="_blank" href="https://github.com/paccao"><i class="fab fa-github fa-9x"></i></a>
-                <a target="_blank" href="https://www.linkedin.com/in/joel-plumppu-254013202/"><i
-                    class="fab fa-linkedin fa-9x"></i></a>
-              </div>
+              <a target="_blank" href="https://github.com/paccao"><i class="fab fa-github fa-5x"></i></a>
+              <a target="_blank" href="https://www.linkedin.com/in/joel-plumppu-254013202/"><i
+                  class="fab fa-linkedin fa-5x"></i></a>
             </div>
           </section>
           <section class="copyright">
