--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               <img class="about-wrapper-img" src="./images/Joel in the bushes.jpg" alt="Picture of me in the woods" />
               <h2 class="about-wrapper-text about-header">About me</h2>
               <p class="about-wrapper-text about-info about-info-1">
-                Hi! My name is Joel Plumppu and I am 20 years old. I'm a junior web developer currently
+                Hi! My name is Joel Plumppu and I am 20 years old. I'm a frontend web developer currently
                 studying at Jensens education in Gothenburg, Sweden. I'm currently learning React and Tailwindcss.
               </p>
               <p class="about-wrapper-text about-info about-info-2">
