--- a/index.html
+++ b/index.html
@@ -86,17 +86,25 @@
                 alt="An image of the seaside cliffs layed out nicely along the coast." />
               <div class="box box-1">
                 <article class="info">
-                  <h3 class="box-h3">Layout Project</h3>
+                  <h3 class="box-h3">Youtube Music App "Ljudio"</h3>
                   <p class="box-info">
-                    My first hand in project from my Higher Vocational Education
-                    program, a project to show my understanding of css grid,
-                    flexbox and some media queries.
+                    A music app using the youtube iFrame API, developed with React, Node.js, Express and SQLlite 3. The
+                    project was a group effort of 4 people where we worked with the agile method <b>Scrum</b>.<br><br>My
+                    main task during the project was
+                    to
+                    figure out rendering of elements in React where I got a deeper understanding of the React
+                    hooks <b>useContext</b>, <b>useState</b> and <b>useEffect</b>.<br><br>I got the
+                    chance
+                    to practice as the <b>Scrum
+                      master</b> where I led the group through daily standups, sprint reviews and retrospectives. In the
+                    team
+                    we also worked a lot with <b>Git</b> and I learned about managing branches and merges.
                   </p>
                 </article>
               </div>
               <div class="box-1-link box-link">
-                <a href="https://github.com/paccao/css-grid-flexbox-exercise" target="_blank">
-                  Link
+                <a href="https://github.com/paccao/Ljudio-group5" target="_blank">
+                  Source
                 </a>
               </div>
             </section>
@@ -107,42 +115,37 @@
                 alt="An image of a desolate land" />
               <div class="box box-2">
                 <article class="info">
-                  <h3 class="box-h3">Apocalyptic Post-Human Clicker</h3>
+                  <h3 class="box-h3">This Portfolio Website</h3>
                   <p class="box-info">
-                    An arcade game where you click to plant trees and upgrade
-                    your technology & skills to save a dystopic desolate planet.
+                    This was my final project in the first course I had of Web development. It was a project aimed to
+                    test my skills in semantic
+                    HTML, CSS Grid, Flexbox, media queries, web accessibility, git and github.
                   </p>
                 </article>
               </div>
               <div class="box-2-link box-link">
-                <a href="https://github.com/paccao/Clicker" target="_blank">
+                <a href="https://github.com/paccao/Portfolio-Website" target="_blank">
                   Link</a>
               </div>
             </section>
 
             <section class="showcase-row3">
-              <!-- <img
-                class="showcase-img showcase-img-3"
-                src="./images/main-section/milad-b-fakurian-WRnuGh8rPm0-unsplash.jpg"
-                alt="placeholder 300x300 img"
-              /> -->
-              <span class="showcase-img showcase-img-3">
-                <span></span>
-              </span>
+              <img class="showcase-img showcase-img-3"
+                src="./images/main-section/milad-b-fakurian-WRnuGh8rPm0-unsplash.jpg" alt="placeholder 300x300 img" />
               <div class="box box-3">
                 <article class="info">
-                  <h3 class="box-h3">Example</h3>
+                  <h3 class="box-h3">PokéDex</h3>
                   <p class="box-info">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Totam, error!
+                    A very simple website where I learned the basics of dynamically rendering data fetched from an
+                    external API.
                   </p>
                 </article>
               </div>
               <div class="box-3-link box-link">
-                <a href="https://github.com/paccao/" target="_blank"> Link</a>
+                <a href="https://github.com/paccao/Pokedex" target="_blank"> Link</a>
               </div>
             </section>
-            <section class="showcase-row4">
+            <!-- <section class="showcase-row4">
               <img class="showcase-img showcase-img-4"
                 src="./images/main-section/squares/miguel-angel-diaz-magister-WJ--6hezMRI-unsplash.jpg"
                 alt="placeholder 300x300 img" />
@@ -164,7 +167,7 @@
               <div class="box-4-link box-link">
                 <a href="https://github.com/paccao/" target="_blank"> Link</a>
               </div>
-            </section>
+            </section> -->
           </section>
 
           <span class="main-parallax"></span>
